--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -195,9 +195,9 @@
 
         <!--feature dependencies-->
         <dependency>
-            <groupId>ddf.features</groupId>
-            <artifactId>cxf</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.apache.cxf.karaf</groupId>
+            <artifactId>apache-cxf</artifactId>
+            <version>${cxf.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
