--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -36,7 +36,7 @@
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "@connexta/icons": "git://github.com/connexta/icons.git#v0.0.3",
+    "@connexta/icons": "git+https://github.com/connexta/icons.git#v0.0.3",
     "@fortawesome/fontawesome-svg-core": "1.2.19",
     "@fortawesome/free-solid-svg-icons": "5.9.0",
     "@fortawesome/react-fontawesome": "0.1.4",
@@ -70,7 +70,7 @@
     "golden-layout": "1.5.8",
     "html-react-parser": "0.4.6",
     "immer": "1.5.0",
-    "imperio": "git://github.com/connexta/imperio.git#3b1044430b72a4dd48e766faedf86b8b0f4fadeb",
+    "imperio": "git+https://github.com/connexta/imperio.git#3b1044430b72a4dd48e766faedf86b8b0f4fadeb",
     "jquery": "3.2.1",
     "jquery-ui": "1.12.1",
     "jquery-ui-multiselect-widget": "1.17.0",
