--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
         <c3p0.version>0.9.5.5</c3p0.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
-        <camel.version>3.14.1</camel.version>
+        <camel.version>3.18.0</camel.version>
         <cesium.version>1.34</cesium.version>
         <commons-compress.version>1.21</commons-compress.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
@@ -179,7 +179,7 @@
         <commons-validator.version>1.6</commons-validator.version>
         <components-font-awesome.version>4.7.0</components-font-awesome.version>
         <countryconverter.version>0.1.8</countryconverter.version>
-        <cxf.version>3.4.8</cxf.version>
+        <cxf.version>3.5.3</cxf.version>
         <ddf-admin-ui.version>2.25.0</ddf-admin-ui.version>
         <decanter.version>1.3.0</decanter.version>
         <dropwizard.version>4.1.25</dropwizard.version>
@@ -432,6 +432,13 @@
                 <type>pom</type>
             </dependency>
             <dependency>
+                <groupId>org.apache.camel.karaf</groupId>
+                <artifactId>camel-karaf-bom</artifactId>
+                <version>${camel.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-bom</artifactId>
                 <version>${jetty.version}</version>
@@ -501,6 +508,18 @@
                         <artifactId>bzip2</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <!-- Solr (override camel-solr transitive dependencies from Camel BOM) -->
+            <dependency>
+                <groupId>org.apache.solr</groupId>
+                <artifactId>solr-solrj</artifactId>
+                <version>${solr.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${solr.zookeeper.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
