Upgrade to Tika 1.28.4 and POI 5.2.2

--- a/catalog/core/catalog-core-camelcomponent/pom.xml
+++ b/catalog/core/catalog-core-camelcomponent/pom.xml
@@ -110,9 +110,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
+            <groupId>org.apache.tika</groupId>
             <artifactId>tika-bundle</artifactId>
-            <version>${tika.thirdparty.bundle.version}</version>
+            <version>${tika.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
