--- a/catalog/transformer/catalog-transformer-xlsx/pom.xml
+++ b/catalog/transformer/catalog-transformer-xlsx/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
+            <artifactId>poi-ooxml-full</artifactId>
             <version>${xlsx.transformer.poi.version}</version>
         </dependency>
         <dependency>
