--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -127,9 +127,9 @@
         </dependency>
         <!-- BEGIN: Tika dependencies -->
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
+            <groupId>org.apache.tika</groupId>
             <artifactId>tika-bundle</artifactId>
-            <version>${tika.thirdparty.bundle.version}</version>
+            <version>${tika.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.luben</groupId>
@@ -145,6 +145,38 @@
             <groupId>net.sf.jwordnet</groupId>
             <artifactId>jwnl</artifactId>
             <version>${jwnl.version}</version>
+        </dependency>
+        <!-- END -->
+        <!-- BEGIN: POI dependencies -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-all</artifactId>
+            <version>1.14</version>
+        </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis-ext</artifactId>
+            <version>1.3.04</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>xmlgraphics-commons</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>${pdfbox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>fontbox</artifactId>
+            <version>${pdfbox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.rototor.pdfbox</groupId>
+            <artifactId>graphics2d</artifactId>
+            <version>0.38</version>
         </dependency>
         <!-- END -->
         <dependency>
