--- a/platform/security/security-oidc-bundle/pom.xml
+++ b/platform/security/security-oidc-bundle/pom.xml
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.cryptomator</groupId>
             <artifactId>siv-mode</artifactId>
-            <version>1.2.2</version>
+            <version>${cryptomator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mindrot</groupId>
