--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -415,7 +415,7 @@
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>${nimbus.version}</version>
+            <version>${nimbus.jose.jwt.version}</version>
         </dependency>
         <dependency>
             <groupId>net.minidev</groupId>
