--- a/platform/security/realm/security-realm-oidc/pom.xml
+++ b/platform/security/realm/security-realm-oidc/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>${nimbus.version}</version>
+            <version>${nimbus.jose.jwt.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
