--- a/pom.xml
+++ b/pom.xml
@@ -261,8 +261,9 @@
         <opensaml.version>3.4.6</opensaml.version>
         <opensaml.osgi.version>3.4.5_2</opensaml.osgi.version>
         <nimbus.version>8.14.1</nimbus.version>
-        <nimbus.oidc.version>8.3</nimbus.oidc.version>
-        <nimbus.content-type.version>2.0</nimbus.content-type.version>
+        <nimbus.oidc.version>8.22</nimbus.oidc.version>
+        <nimbus.content-type.version>2.1</nimbus.content-type.version>
+        <nimbus.jose.jwt.version>8.18</nimbus.jose.jwt.version>
         <nimbus.langtag.version>1.4.4</nimbus.langtag.version>
         <org.geotools.bundle.version>${org.geotools.version}_2</org.geotools.bundle.version>
         <org.geotools.version>20.1</org.geotools.version>
@@ -275,7 +276,7 @@
         <ows-v_1_0_0-schema.version>1.1.0</ows-v_1_0_0-schema.version>
         <ogc-filter-v_1_1_0-schema.thirdparty.version>1.1.0_5</ogc-filter-v_1_1_0-schema.thirdparty.version>
         <openjson.version>1.0.12</openjson.version>
-        <pac4j.version>4.0.1</pac4j.version>
+        <pac4j.version>4.5.6</pac4j.version>
         <pdfbox.version>2.0.23</pdfbox.version>
         <poi.version>5.2.2</poi.version>
         <xlsx.transformer.poi.version>5.2.2</xlsx.transformer.poi.version>
