--- a/catalog/opensearch/catalog-opensearch-source/pom.xml
+++ b/catalog/opensearch/catalog-opensearch-source/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
             <artifactId>org.apache.servicemix.bundles.jdom</artifactId>
-            <version>2.0.6_1</version>
+            <version>${jdom2.bundle.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.opensearch</groupId>
