--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@
         <jboss-logging.version>3.3.1.Final</jboss-logging.version>
         <jcodec.version>0.2.0_1</jcodec.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
+        <jdom2.bundle.version>2.0.6.1_1</jdom2.bundle.version>
         <jetty.version>9.4.46.v20220331</jetty.version>
         <jgroups.version>3.6.13.Final</jgroups.version>
         <joda-convert.version>1.7</joda-convert.version>
