--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,7 @@
         <xmlbeans.version>5.0.3</xmlbeans.version>
         <xmlsec.version>2.3.1</xmlsec.version>
         <xpp3.bundle.version>1.1.4c_6</xpp3.bundle.version>
+        <xstream.bundle.version>1.4.19_1</xstream.bundle.version>
         <xstream.version>1.4.19</xstream.version>
         <micrometer.version>1.8.0</micrometer.version>
         <micrometer.hdrhistogram.version>2.1.12</micrometer.hdrhistogram.version>
