--- a/catalog/plugin/catalog-plugin-metacardbackup-storage-common/pom.xml
+++ b/catalog/plugin/catalog-plugin-metacardbackup-storage-common/pom.xml
@@ -44,6 +44,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ddf.catalog.plugin</groupId>
             <artifactId>catalog-plugin-metacardbackup-storage-api</artifactId>
             <version>${project.version}</version>
