Upgrade to Geotools 24.6 and Xerces 2.12.2
- Creates Geotools and JTS features
- Upgrades Geotools to 24.6
- Upgrades Xerces to 2.12.2
- Fixes Xerces export version
- Improves itest catalog clearing error logging

--- a/catalog/common/catalog-common-geo-formatter/pom.xml
+++ b/catalog/common/catalog-common-geo-formatter/pom.xml
@@ -29,8 +29,9 @@
             <version>${json-simple.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
-            <artifactId>geotools-suite</artifactId>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>${jts.geotools.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.abdera</groupId>
