--- a/catalog/spatial/geocoding/spatial-geocoding-api/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-api/pom.xml
@@ -37,9 +37,9 @@
             <artifactId>platform-util</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
-            <artifactId>geotools-suite</artifactId>
-            <version>${org.geotools.bundle.version}</version>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-opengis</artifactId>
+            <version>${org.geotools.version}</version>
         </dependency>
     </dependencies>
     <build>
