--- a/catalog/spatial/wfs/spatial-wfs-converter/pom.xml
+++ b/catalog/spatial/wfs/spatial-wfs-converter/pom.xml
@@ -55,9 +55,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
-            <artifactId>geotools-suite</artifactId>
-            <version>${org.geotools.bundle.version}</version>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>${jts.geotools.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
