--- a/catalog/transformer/catalog-transformer-overlay/pom.xml
+++ b/catalog/transformer/catalog-transformer-overlay/pom.xml
@@ -26,8 +26,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
-            <artifactId>geotools-suite</artifactId>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>${jts.geotools.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
@@ -40,11 +41,6 @@
         <dependency>
             <groupId>ddf.action.core</groupId>
             <artifactId>action-core-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-referencing</artifactId>
-            <version>${org.geotools.version}</version>
         </dependency>
         <dependency>
             <groupId>org.la4j</groupId>
