--- a/catalog/validator/catalog-validator-unsupportedattributes/pom.xml
+++ b/catalog/validator/catalog-validator-unsupportedattributes/pom.xml
@@ -31,9 +31,9 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.codice.thirdparty</groupId>
+      <groupId>org.geotools</groupId>
       <artifactId>gt-opengis</artifactId>
-      <version>${opengis.bundle.version}</version>
+      <version>${org.geotools.version}</version>
     </dependency>
     <dependency>
       <groupId>ddf.catalog.core</groupId>
