--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -21,8 +21,8 @@
 # Comma separated list of features repositories to register by default
 #
 featuresRepositories= \
- mvn:ddf.features/install-profiles/${project.version}/xml/features, \
- mvn:org.codice.ddf/ui/${ddf-admin-ui.version}/xml/features
+    mvn:ddf.features/kernel/${project.version}/xml/features, \
+    mvn:ddf.features/install-profiles/${project.version}/xml/features
 
 #
 # Comma separated list of features to install at startup
@@ -46,10 +46,7 @@ featuresRepositories= \
 # to the DDF featuresBoot was made in the Karaf upgrade to 4.1.1.
 #
 # TODO DDF-3072 Investigate improvements of this configuration.
-featuresBoot= \
- (ddf-boot-features, \
- ui, \
- admin-modules-installer)
+featuresBoot=(ddf-boot-features)
 
 #
 # Defines if the boot features are started in asynchronous mode (in a dedicated thread)
